/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

buildscript {
    repositories {
        mavenCentral()
        // Add Spring milestone repository to access prerelease versions
        maven { url = uri('https://repo.spring.io/milestone') }
        // Add Spring snapshot repository if needed for very latest builds
        maven { url = uri('https://repo.spring.io/snapshot') }
    }
    dependencies {
        classpath 'mysql:mysql-connector-java:8.0.33'
    }
}

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    // Update to Spring Boot 3.2.4 (latest stable as of July 2025)
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    // Add the versions plugin to check for dependency updates
    id 'com.github.ben-manes.versions' version '0.51.0'
    id 'org.flywaydb.flyway' version '10.10.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    // Add Spring milestone repository to access prerelease versions
    maven { url = uri('https://repo.spring.io/milestone') }
    // Add Spring snapshot repository if needed for very latest builds
    maven { url = uri('https://repo.spring.io/snapshot') }
}

// Configure source sets for hexagonal tests
sourceSets {
    // Configure the main source set to include the app module sources
    main {
        java {
            srcDirs = ['app/src/main/java', 'src/main/java']
        }
        resources {
            srcDirs = ['app/src/main/resources', 'src/main/resources']
        }
    }
    
    // Configure the test source set to include app module test sources
    test {
        java {
            srcDirs = ['app/src/test/java', 'src/test/java']
        }
        resources {
            srcDirs = ['app/src/main/resources', 'app/src/test/resources', 'src/test/resources']
        }
    }
    
    hexagonalTest {
        java {
            srcDir 'src/test/hexagonal'
        }
        resources {
            srcDir 'src/main/resources'
            srcDir 'src/test/resources'
        }
        compileClasspath += sourceSets.main.output + configurations.testCompileClasspath
        runtimeClasspath += output + compileClasspath + configurations.testRuntimeClasspath
    }
}

// Create a task for running hexagonal tests using the tasks.register approach
tasks.register('hexagonalTest', Test) {
    description = 'Runs the hexagonal architecture tests.'
    group = 'verification'
    
    testClassesDirs = sourceSets.hexagonalTest.output.classesDirs
    classpath = sourceSets.hexagonalTest.runtimeClasspath
    
    useJUnitPlatform()
    
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}

// Make sure the main test task uses JUnit Platform as well
tasks.named('test') {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}

// Configure the resource processing tasks to handle duplicates
tasks.named('processHexagonalTestResources') {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

// Add duplicate handling strategy for regular test resources
tasks.named('processTestResources') {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

// Make sure check depends on hexagonalTest
check.dependsOn hexagonalTest

dependencies {
    // This dependency is used by the application.
    implementation libs.guava
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-mysql:4.8.4'
    
    // Add Jakarta Persistence API for JPA
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
    
    // Add Jakarta Validation API for constraint validation
    implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    
    // Add AspectJ dependencies for the logging aspect
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.aspectj:aspectjweaver:1.9.24'
    
    // Add Caffeine cache dependencies
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    
    // Add micrometer dependencies for metrics
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-core'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    
    // Removed Lombok dependencies as we're now using Java 17 features

    // ArchUnit for architecture testing
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.2.1'
    hexagonalTestImplementation 'com.tngtech.archunit:archunit-junit5:1.2.1'
    
    // Updated MySQL Connector to the latest version
    runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
    
    // Add H2 as a implementation dependency to access its API
    implementation 'com.h2database:h2:2.3.232'
    
    // Add Flyway for database migrations with Spring Boot compatible versions
    implementation 'org.flywaydb:flyway-core:10.10.0'
    implementation 'org.flywaydb:flyway-mysql:10.10.0'
    
    // Testing dependencies - using Spring Boot managed versions for consistency
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    
    // Add additional Spring Boot test slices for repository and web tests
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    
    // JUnit Platform Suite dependencies with aligned versions
    testImplementation 'org.junit.platform:junit-platform-suite-api:1.10.2'
    testImplementation 'org.junit.platform:junit-platform-suite-engine:1.10.2'
    testImplementation 'org.junit.platform:junit-platform-suite-commons:1.10.2'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
    
    // Add dependencies for the hexagonal test source set
    hexagonalTestImplementation sourceSets.main.output
    hexagonalTestImplementation sourceSets.test.output
    hexagonalTestImplementation project.configurations.testImplementation.dependencies
    hexagonalTestRuntimeOnly project.configurations.testRuntimeOnly.dependencies
    
    // Exclude JUnit 4 to prevent version conflicts
    configurations.all {
        exclude group: 'junit', module: 'junit'
    }
    
    // Add Spring Boot configuration processor
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    
    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // JSON handling
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
}

flyway {
    url = 'jdbc:mysql://localhost:3306/perundhu?useSSL=false&allowPublicKeyRetrieval=true'
    user = 'root'
    password = 'root'
    locations = ['classpath:db/migration']
    baselineOnMigrate = true
    validateOnMigrate = true
    outOfOrder = true
    driver = 'com.mysql.cj.jdbc.Driver'
}

// Disable configuration cache for Flyway tasks to prevent "Task.project" access errors
tasks.configureEach { task ->
    if (task.getClass().name.startsWith('org.flywaydb.gradle.task')) {
        task.notCompatibleWithConfigurationCache("Flyway plugin accesses project at execution time")
    }
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use JUnit Jupiter test framework with version that matches Spring Boot's managed version
            useJUnitJupiter()
        }
    }
}

// Configuration for the versions plugin to check for dependency updates
tasks.named('dependencyUpdates').configure {
    // Disregard alpha, beta, rc, milestone, dev, and snapshot versions
    rejectVersionIf {
        ['alpha', 'beta', 'rc', 'CR', 'M', 'dev', 'snapshot'].any { qualifier ->
            it.candidate.version.toLowerCase().contains(qualifier)
        }
    }
    // Show outdated dependencies reporting
    outputFormatter = 'json,html'
    outputDir = "build/reports/dependencies"
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
        // Configure vendor if needed
        // vendor = JvmVendorSpec.ADOPTIUM
    }
    // Removed sourceCompatibility and targetCompatibility properties
    // as they're deprecated in favor of the toolchain API
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Xlint:deprecation'
    options.deprecation = true
    options.compilerArgs << '-parameters'
    options.annotationProcessorPath = configurations.annotationProcessor
    options.encoding = 'UTF-8'
    // Use release instead of source/target compatibility
    options.release = 17
    // Enable preview features for Java 17
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    // Enable preview features for tests
    jvmArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    // Enable preview features for application execution
    jvmArgs += ['--enable-preview']
}

// Enable annotation processing
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

application {
    // Define the main class for the application.
    mainClass = 'com.perundhu.App'
}

// Keep regular tests disabled for now, while we're migrating
// to the hexagonal architecture, we'll use the hexagonalTest task instead
test {
    // Enable tests so we can run and fix BusTrackingServiceImplTest
    enabled = true
}
